--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
         </header>
 
         <div class="info">
-            <img src="icons/highlight.svg" alt="" class="info__title-line">
+            <img src="./icons/highlight.svg" alt="" class="info__title-line">
             <div class="info__title-menu">
 
                 <h1 class="info__title">Услуги и сервисы</h1>
                 <div class="header-navigation__buttons__desktop">
                     <button class="header-navigation__buttons__desktop repair">Оставить заявку
-                        <img class="desktop__buttons-icon"  src="icons/repair.svg" alt="">
+                        <img class="desktop__buttons-icon"  src="./icons/repair.svg" alt="">
                     </button>
                     <button class="header-navigation__buttons__desktop checkStatus">Статус ремонта
-                        <img class="desktop__buttons-icon" src="icons/checkstatus.svg" alt="">
+                        <img class="desktop__buttons-icon" src="./icons/checkstatus.svg" alt="">
                     </button>
                 </div>
             </div>
@@ -86,12 +86,12 @@
                     очередь, советуют нас родным и близким.
                 </p>
 
-                <label class="description__expander"> <img src="icons/expand.svg" alt="">
+                <label class="description__expander"> <img src="./icons/expand.svg" alt="">
                     <button type="button" class="text-expander">Читать далее</button>
                 </label>
             </div>
             <div class="desktop-image">
-                <img class="image" width="100%" height="100%"  src="img/_MG_3223-.png" alt="CPS_photo">
+                <img class="image" width="100%" height="100%"  src="./img/_MG_3223-.png" alt="CPS_photo">
             </div>
             
 
