--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </label>
             </div>
             <div class="desktop-image">
-                <img class="image" width="100%" height="100%"  src="../img/_MG_3223-.png" alt="CPS_photo">
+                <img class="image" width="100%" height="100%"  src="img/_MG_3223-.png" alt="CPS_photo">
             </div>
             
 
