--- a/index-mobile-menu (block 1.4).html
+++ b/index-mobile-menu (block 1.4).html
@@ -11,25 +11,28 @@
 
 <body>
     <div class="mobile-menu">
-        <header class="mobile-menu__top-header">
-            <button class="buttons button-burger">
-            </button>
-            <img class="logo" src="./icons/logo.svg" alt="">
-            <button class="buttons button-search">
-            </button>
-        </header>
-        <nav class="mobile-menu__navigation-menu">
-            <ul class="mobile-menu__navigation-menu__list">
-                <li class="active"><a href="#">Ремонт техники</a></li>
-                <li><a href="#">Услуги и сервисы</a></li>
-                <li><a href="#">Корпоративным клиентам</a></li>
-                <li><a href="#">Продавцам техники</a></li>
-                <li><a href="#">Партнерам</a></li>
-                <li><a href="#">Производителям</a></li>
-                <li><a href="#">Наши сервисные центры</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-        </nav>
+
+        <main>
+            <header class="mobile-menu__top-header">
+                <button class="buttons button-burger">
+                </button>
+                <img class="logo" src="./icons/logo.svg" alt="">
+                <button class="buttons button-search">
+                </button>
+            </header>
+            <nav class="mobile-menu__navigation-menu">
+                <ul class="mobile-menu__navigation-menu__list">
+                    <li class="active"><a href="#">Ремонт техники</a></li>
+                    <li><a href="#">Услуги и сервисы</a></li>
+                    <li><a href="#">Корпоративным клиентам</a></li>
+                    <li><a href="#">Продавцам техники</a></li>
+                    <li><a href="#">Партнерам</a></li>
+                    <li><a href="#">Производителям</a></li>
+                    <li><a href="#">Наши сервисные центры</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </nav>
+        </main>
         <footer class="mobile-menu__footer">
             <nav class="footer__navigation">
                 <div class="footer__navigation-icons">
@@ -49,10 +52,10 @@
             <div class="footer__language-select">
                 <input type="radio" name="language" id="language-select-RU">
                 <label for="language-select-RU"> RU</label>
-                    
+
                 <input type="radio" name="language" id="language-select-EN">
                 <label for="language-select-EN"> EN</label>
-                    
+
                 <input type="radio" name="language" id="language-select-CH">
                 <label for="language-select-CH"> CH</label>
             </div>
