--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <div class="container">
         <header class="mobile-header">
             <nav class="header-navigation">
-
                 <div class="header-navigation__buttons--left">
                     <button class="header-navigation__button burger">
                         <img src="icons/burger.svg" alt="">
@@ -83,7 +82,7 @@
                     очередь, советуют нас родным и близким.
                 </p>
 
-                <label class="description__expander"> <img src="icons/expand.svg" alt="">
+                <label class="description__expander"> <img src="icon1s/expand.svg" alt="">
                     <button type="button" class="text-expander">Читать далее</button>
                 </label>
             </div>
