--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <!-- <link rel="stylesheet" href="style/style-mobile.css"> -->
     <title>CPS</title>
 </head>
 
@@ -53,7 +54,7 @@
                 <h1 class="info__title">Услуги и сервисы</h1>
                 <div class="header-navigation__buttons__desktop">
                     <button class="header-navigation__buttons__desktop repair">Оставить заявку
-                        <img class="desktop__buttons-icon"  src="icons/repair.svg" alt="">
+                        <img class="desktop__buttons-icon" src="icons/repair.svg" alt="">
                     </button>
                     <button class="header-navigation__buttons__desktop checkStatus">Статус ремонта
                         <img class="desktop__buttons-icon" src="icons/checkstatus.svg" alt="">
@@ -87,12 +88,64 @@
                 </label>
             </div>
             <div class="desktop-image">
-                <img class="image" width="100%" height="100%"  src="./img/image-cps.png" alt="CPS_photo">
+                <img class="image" width="100%" height="100%" src="./img/image-cps.png" alt="CPS_photo">
             </div>
-            
+
 
         </main>
     </div>
+    <div class="aside-menu hidden">
+        <div class="aside-menu__main">
+            <header class="aside-menu__top-header">
+                <button class="buttons button-burger">
+                </button>
+                <img class="logo aside-menu__logo" src="./icons/logo.svg" alt="">
+                <button class="buttons button-search">
+                </button>
+            </header>
+            <nav class="aside-menu__navigation-menu">
+                <ul class="aside-menu__navigation-menu__list">
+                    <li class="active"><a href="#">Ремонт техники</a></li>
+                    <li><a href="#">Услуги и сервисы</a></li>
+                    <li><a href="#">Корпоративным клиентам</a></li>
+                    <li><a href="#">Продавцам техники</a></li>
+                    <li><a href="#">Партнерам</a></li>
+                    <li><a href="#">Производителям</a></li>
+                    <li><a href="#">Наши сервисные центры</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </nav>
+        </div>
+        <footer class="aside-menu__footer">
+            <nav class="footer__navigation">
+                <div class="footer__navigation-icons">
+                    <ul>
+                        <li class="icon icon-phone"><a href="#"></a></li>
+                        <li class="icon icon-chat"><a href="#"></a></li>
+                        <li class="icon icon-profile"><a href="#"></a></li>
+                    </ul>
+                </div>
+                <p class="footer-email">
+                    main@cps.com
+                </p>
+                <p class="footer-phone">
+                    8 800 890 8900
+                </p>
+            </nav>
+            <div class="footer__language-select">
+                <input type="radio" name="language" id="language-select-RU">
+                <label for="language-select-RU"> RU</label>
+
+                <input type="radio" name="language" id="language-select-EN">
+                <label for="language-select-EN"> EN</label>
+
+                <input type="radio" name="language" id="language-select-CH">
+                <label for="language-select-CH"> CH</label>
+            </div>
+        </footer>
+    </div>
+
+    <script src="js.js"></script>
 </body>
 
 </html>
