--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <!-- <link rel="stylesheet" href="style/style-mobile.css"> -->
     <title>CPS</title>
 </head>
 
@@ -53,7 +54,7 @@
                 <h1 class="info__title">Услуги и сервисы</h1>
                 <div class="header-navigation__buttons__desktop">
                     <button class="header-navigation__buttons__desktop repair">Оставить заявку
-                        <img class="desktop__buttons-icon"  src="icons/repair.svg" alt="">
+                        <img class="desktop__buttons-icon" src="icons/repair.svg" alt="">
                     </button>
                     <button class="header-navigation__buttons__desktop checkStatus">Статус ремонта
                         <img class="desktop__buttons-icon" src="icons/checkstatus.svg" alt="">
@@ -72,25 +73,25 @@
         </div>
         <main>
             <div class="description">
-                <p class="description__text">
-                    Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете
-                    отремонтировать свой ноутбук Dell с официальной гарантией производителя. <br><br>
-                    Мы успешно работаем с
-                    1992 года и заслужили репутацию надежного партнера, что подтверждает большое
-                    количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в
-                    свою
-                    очередь, советуют нас родным и близким.
-                </p>
-
-                <label class="description__expander"> <img src="icon1s/expand.svg" alt="">
+                <div class="description__wrapper">
+                    <p class="description__text">
+                        Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете
+                        отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
+                    <p class="description__text">
+                        Мы успешно работаем с
+                        1992 года и заслужили репутацию надежного партнера, что подтверждает большое
+                        количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в
+                        свою
+                        очередь, советуют нас родным и близким.
+                    </p>
+                </div>
+                <label class="description__expander">
                     <button type="button" class="text-expander">Читать далее</button>
                 </label>
             </div>
             <div class="desktop-image">
-                <img class="image" width="100%" height="100%"  src="./img/image-cps.png" alt="CPS_photo">
+                <img class="image" width="100%" height="100%" src="./img/image-cps.jpg" alt="CPS_photo">
             </div>
-            
-
         </main>
     </div>
 </body>
