--- a/index.html
+++ b/index.html
@@ -53,12 +53,8 @@
 
                 <h1 class="info__title">Услуги и сервисы</h1>
                 <div class="header-navigation__buttons__desktop">
-                    <button class="header-navigation__buttons__desktop repair">Оставить заявку
-                        <img class="desktop__buttons-icon" src="icons/repair.svg" alt="">
-                    </button>
-                    <button class="header-navigation__buttons__desktop checkStatus">Статус ремонта
-                        <img class="desktop__buttons-icon" src="icons/checkstatus.svg" alt="">
-                    </button>
+                    Оставить заявку <button class="header-navigation__buttons__desktop repair"></button>
+                    Статус ремонта<button class="header-navigation__buttons__desktop checkStatus"></button>
                 </div>
             </div>
             <div class="info__navigation">
@@ -85,9 +81,7 @@
                         очередь, советуют нас родным и близким.
                     </p>
                 </div>
-                <label class="description__expander">
-                    <button type="button" class="text-expander">Читать далее</button>
-                </label>
+                <button type="button" class="text-expander">Читать далее</button>
             </div>
             <div class="desktop-image">
                 <img class="image" width="100%" height="100%" src="./img/image-cps.jpg" alt="CPS_photo">
