--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         очередь, советуют нас родным и близким.
                     </p>
                 </div>
-                <button type="button" class="text-expander">Читать далее</button>
+                <button type="button" class="text-expander description-expander">Читать далее</button>
             </div>
             <div class="desktop-image">
                 <img class="image" width="100%" height="100%" src="./img/image-cps.jpg" alt="CPS_photo">
